<?xml version="1.0" encoding="utf-8"?>
<navigation
    android:id="@+id/main_graph"
    app:startDestination="@+id/menu_inicio"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:label="@string/menu_comunidade"
        android:name="com.snout.beta.ComunidadeFragment"
        android:id="@+id/menu_comunidade" />

    <fragment
        android:label="@string/menu_perfil"
        android:name="com.snout.beta.PerfilFragment"
        android:id="@+id/menu_perfil" />

    <fragment
        android:label="@string/menu_pesquisar"
        android:name="com.snout.beta.PesquisaFragment"
        android:id="@+id/menu_pesquisar" />

    <fragment
        android:label="@string/menu_inicio"
        android:name="com.snout.beta.FeedFragment"
        android:id="@+id/menu_inicio"/>

</navigation>
