<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff0e0e0e"
    android:textAlignment="center">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="Curtidas"
        android:textColor="#ffffffff"
        android:textSize="15.0sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/qtdcurtidas" />

    <TextView
        android:id="@+id/qtdcurtidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="62dp"
        android:text="@string/_150_3k"
        android:textColor="@color/white"
        android:textSize="17.0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgmeuperfil"
        app:layout_constraintTop_toBottomOf="@+id/imgmeuperfil" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/seguindo"
        android:textColor="#ffffffff"
        android:textSize="15.0sp"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/qtdseguindo" />

    <TextView
        android:id="@+id/qtdseguindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/_124"
        android:textColor="@color/white"
        android:textSize="17.0sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/meunomedeusuario" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:text="@string/seguidores"
        android:textColor="#ffffffff"
        android:textSize="15.0sp"
        app:layout_constraintEnd_toStartOf="@+id/qtdcurtidas"
        app:layout_constraintTop_toBottomOf="@+id/qtdseguidores" />

    <TextView
        android:id="@+id/qtdseguidores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/_15_4k"
        android:textColor="@color/white"
        android:textSize="17.0sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/meunomedeusuario" />

    <TextView
        android:id="@+id/meunomedeusuario"
        android:layout_width="212.0dip"
        android:layout_height="35.0dip"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/qtdcurtidas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgmeuperfil" />

    <Button
        android:id="@+id/btnedit"
        android:layout_width="124.0dip"
        android:layout_height="40.0dip"
        android:layout_marginStart="140dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="#ffff0066"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#00ffffff"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="0.0"
        android:text="@string/editar_perfil"
        android:textColor="@android:color/white"
        android:textSize="11.0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/configperfil"
        android:layout_width="25.0dip"
        android:layout_height="30.0dip"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#ff0e0e0e"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgmeuperfil"
        android:layout_width="127.0dip"
        android:layout_height="123.0dip"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/feedpesquisa"
        android:name="com.snout.beta.RecomendacaoFragment"
        android:layout_width="413dp"
        android:layout_height="344dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnedit" />
</androidx.constraintlayout.widget.ConstraintLayout>